--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/txView_notAlarm"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:text="n시간 m분 후에 알람이 울립니다" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:gravity="end"
+        android:id="@+id/lout_add_Option"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="#91DDFF"
+            android:text="add"
+            android:textColor="#455A64" />
+
+        <Button
+            android:id="@+id/btn_option"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="#91DDFF"
+            android:text="option"
+            android:textColor="#455A64" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/liView_alarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <include layout="@layout/navigation"/>
+
+</LinearLayout>
