--- a/app/src/main/res/layout/menu_bar.xml
+++ b/app/src/main/res/layout/menu_bar.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_gravity="bottom"
     android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_alignParentBottom="true"
     android:gravity="center"
-    >
+    android:layout_height="80dp">
 
     <Button
-        android:id="@+id/btn_alarm"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:text="알람"/>
-
-    <Button
-        android:id="@+id/btn_stopWatch"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:text="스톱워치"/>
-
-    <Button
+        android:layout_margin="10dp"
         android:id="@+id/btn_timer"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="타이머"/>
+        android:text="Timer" />
+
+    <Button
+        android:layout_margin="10dp"
+        android:id="@+id/btn_stopWatch"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="SWatch" />
+
+    <Button
+        android:layout_margin="10dp"
+        android:id="@+id/btn_alarm"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Alarm" />
 
 </LinearLayout>
