--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StopWatchActivity">
@@ -12,18 +13,53 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/btn_add"
+            android:textColor="#000000"
+            android:background="#00FFFFFF"
+            android:id="@+id/btn_alarmOption"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:text="add"/>
-
-        <Button
-            android:id="@+id/btn_option"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:text="opt"/>
+            android:textSize="30dp"
+            android:text=":"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
+
+
+    <TextView
+        android:id="@+id/tv_stop_watch"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:gravity="center"
+        android:text="00:00:00"
+        android:textSize="40dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_margin="20dp"
+            android:background="#00FFFFFF"
+            android:textColor="#000000"
+            android:layout_weight="1"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="RECORD"/>
+
+        <Button
+            android:layout_margin="20dp"
+            android:background="#00FFFFFF"
+            android:textColor="#000000"
+            android:layout_weight="1"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="START"/>
+    </LinearLayout>
+
+
     <LinearLayout
         android:id="@+id/lout_menuBar"
         android:orientation="horizontal"
