--- a/app/src/main/res/layout/activity_timer_acticity.xml
+++ b/app/src/main/res/layout/activity_timer_acticity.xml
@@ -1,10 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".TimerActivity">
+
+    <LinearLayout
+        android:gravity="right"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:textColor="#000000"
+            android:background="#00FFFFFF"
+            android:id="@+id/btn_addAlarm"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:textSize="30dp"
+            android:text="+"/>
+
+        <Button
+            android:textColor="#000000"
+            android:background="#00FFFFFF"
+            android:id="@+id/btn_alarmOption"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:textSize="30dp"
+            android:text=":"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:text="00:00:00"
+        android:textSize="40dp"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="START"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/lout_menuBar"
@@ -44,4 +91,4 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
