--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,138 +8,208 @@
     tools:context=".AddAlarmActivity">
 
     <TextView
+        android:id="@+id/tv_time_selector"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:text="AM  6 : 00"
         android:textSize="40dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_time_selector"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:background="#F1F1F1"
+                android:orientation="vertical"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_time_selector">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:layout_weight="10"
+                        android:text="내일 - 4월 27일(수)"
+                        android:textSize="20dp" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:layout_weight="1"
+                        android:background="#00FFFFFF"
+                        android:text="▦"
+                        android:textColor="#000000"
+                        android:textSize="20dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btn_mon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+
+                        android:background="#00000000"
+                        android:text="월"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
+
+                    <Button
+                        android:id="@+id/btn_tue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#00000000"
+                        android:text="화"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
+
+                    <Button
+                        android:id="@+id/btn_wed"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#00000000"
+                        android:text="수"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
+
+                    <Button
+                        android:id="@+id/btn_thu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#00000000"
+                        android:text="목"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
+
+                    <Button
+                        android:id="@+id/btn_fri"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#00000000"
+                        android:text="금"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
+
+                    <Button
+                        android:id="@+id/btn_sat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#00000000"
+                        android:text="토"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
+
+                    <Button
+                        android:id="@+id/btn_sun"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#00000000"
+                        android:text="일"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:text="공휴일엔 알람 끄기"
+                        android:gravity="center_vertical"
+                        android:textSize="16dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:hint="알람 이름"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:text="알람음"
+                        android:gravity="center_vertical"
+                        android:textSize="16dp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:gravity="center_vertical"
+                        android:text="진동"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:text="리콜"
+                        android:gravity="center_vertical"
+                        android:textSize="16dp"/>
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
     <LinearLayout
-        android:background="#F1F1F1"
+        android:id="@+id/lout_cancel_create"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/btn_cancel"
+            android:text="CANCEL"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_margin="15dp"
-                android:layout_weight="10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="내일 - 4월 27일(수)"
-                android:textSize="20dp"/>
-
-            <Button
-                android:layout_margin="15dp"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#00FFFFFF"
-                android:text="▦"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:textColor="#000000"
+            android:background="#00000000"/>
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/btn_create"
+            android:text="CREATE"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/btn_mon"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="월"
-                android:textSize="15dp"
-                android:textColor="#000000"
-                android:background="#00000000"/>
-
-            <Button
-                android:id="@+id/btn_tue"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="화"
-                android:textSize="15dp"
-                android:textColor="#000000"
-                android:background="#00000000"/>
-
-            <Button
-                android:id="@+id/btn_wed"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="수"
-                android:textSize="15dp"
-                android:textColor="#000000"
-                android:background="#00000000"/>
-
-            <Button
-                android:id="@+id/btn_thu"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="목"
-                android:textSize="15dp"
-                android:textColor="#000000"
-                android:background="#00000000"/>
-
-            <Button
-                android:id="@+id/btn_fri"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="금"
-                android:textSize="15dp"
-                android:textColor="#000000"
-                android:background="#00000000"/>
-
-            <Button
-                android:id="@+id/btn_sat"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="토"
-                android:textSize="15dp"
-                android:textColor="#000000"
-                android:background="#00000000"/>
-
-            <Button
-                android:id="@+id/btn_sun"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="일"
-                android:textSize="15dp"
-                android:textColor="#000000"
-                android:background="#00000000"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <Button
-                android:id="@+id/btn_create"
-                android:text="CREATE"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
+            android:textColor="#000000"
+            android:background="#00000000"/>
     </LinearLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
