--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,88 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".AlarmActivity">
 
     <TextView
-        android:gravity="center"
+        android:id="@+id/tv_time_selector"
         android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:text="n시간 n분 뒤에 알람이 울립니다"/>
+        android:layout_height="260dp"
+        android:gravity="center"
+        android:text="n시간 n분 뒤에 알람이 울립니다"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:gravity="right"
+        android:id="@+id/lout_addAlarm_option"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_time_selector">
 
         <Button
-            android:textColor="#000000"
-            android:background="#00FFFFFF"
             android:id="@+id/btn_addAlarm"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:textSize="30dp"
-            android:text="+"/>
+            android:background="#00FFFFFF"
+            android:text="+"
+            android:textColor="#000000"
+            android:textSize="30dp" />
 
         <Button
-            android:textColor="#000000"
-            android:background="#00FFFFFF"
             android:id="@+id/btn_alarmOption"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:textSize="30dp"
-            android:text=":"/>
+            android:background="#00FFFFFF"
+            android:text=":"
+            android:textColor="#000000"
+            android:textSize="30dp" />
 
     </LinearLayout>
 
-    <ListView
-        android:layout_gravity="bottom"
-        android:id="@+id/lv_alarm"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/lout_addAlarm_option"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/lv_alarm"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/lout_menuBar"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <Button
-            android:background="#00FFFFFF"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            android:layout_weight="1"
             android:id="@+id/btn_alarm"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Alarm"/>
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            android:text="Alarm"
+            android:textColor="#000000"
+            android:textSize="20dp" />
 
         <Button
-            android:background="#00FFFFFF"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            android:layout_weight="1"
             android:id="@+id/btn_stopWatch"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Watch"/>
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            android:text="Watch"
+            android:textColor="#000000"
+            android:textSize="20dp" />
 
         <Button
-            android:background="#00FFFFFF"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            android:layout_weight="1"
             android:id="@+id/btn_timer"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Timer"/>
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            android:text="Timer"
+            android:textColor="#000000"
+            android:textSize="20dp" />
 
     </LinearLayout>
 
 
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
