--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -8,7 +8,7 @@
     tools:context=".AddAlarmActivity">
 
     <TextView
-        android:id="@+id/tv_time_selector"
+        android:id="@+id/textview_time_selector"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:text="AM  6 : 00"
@@ -18,18 +18,19 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_time_selector"
-        app:layout_constraintRight_toRightOf="parent">
+        android:layout_height="300dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_time_selector">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="400dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="430dp"
                 android:background="#F1F1F1"
                 android:orientation="vertical"
                 app:layout_constraintRight_toRightOf="parent"
@@ -139,42 +140,95 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lout_holyDay_option"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:text="공휴일엔 알람 끄기"
-                        android:gravity="center_vertical"
-                        android:textSize="16dp"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:gravity="center_vertical"
+                            android:text="공휴일엔 알람 끄기"
+                            android:textSize="16dp" />
+
+                        <Switch
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:switchMinWidth="60dp"
+                            android:minHeight="48dp"/>
+
+
+                    </LinearLayout>
+
 
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
-                        android:hint="알람 이름"/>
+                        android:hint="알람 이름" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:text="알람음"
-                        android:gravity="center_vertical"
-                        android:textSize="16dp"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:gravity="center_vertical"
-                        android:text="진동"
-                        android:textSize="16dp" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:gravity="center_vertical"
+                            android:text="알람음"
+                            android:textSize="16dp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:text="리콜"
-                        android:gravity="center_vertical"
-                        android:textSize="16dp"/>
+                        <Switch
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:switchMinWidth="60dp"
+                            android:minHeight="48dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:gravity="center_vertical"
+                            android:text="진동"
+                            android:textSize="16dp" />
+
+                        <Switch
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:switchMinWidth="60dp"
+                            android:minHeight="48dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:gravity="center_vertical"
+                            android:text="다시 알림"
+                            android:textSize="16dp" />
+
+                        <Switch
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:switchMinWidth="60dp"
+                            android:minHeight="48dp"/>
+                    </LinearLayout>
+
+
 
 
                 </LinearLayout>
@@ -210,6 +264,7 @@
             android:textColor="#000000"
             android:background="#00000000"/>
     </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
