--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -7,7 +7,7 @@
     tools:context=".AlarmActivity">
 
     <TextView
-        android:id="@+id/tv_time_selector"
+        android:id="@+id/tv_next_alarm_viewer"
         android:layout_width="match_parent"
         android:layout_height="260dp"
         android:gravity="center"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:gravity="right"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time_selector">
+        app:layout_constraintTop_toBottomOf="@+id/tv_next_alarm_viewer">
 
         <Button
             android:id="@+id/btn_addAlarm"
@@ -44,20 +44,26 @@
     </LinearLayout>
 
     <ScrollView
+        android:background="#0000FF"
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/lout_addAlarm_option"
+        app:layout_constraintBottom_toTopOf="@+id/lout_menuBar"
         app:layout_constraintRight_toRightOf="parent">
 
         <LinearLayout
+            android:background="#00FF00"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <ListView
+                android:background="#FF0000"
                 android:id="@+id/lv_alarm"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
+
 
         </LinearLayout>
 
