--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -48,6 +48,7 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:id="@+id/btn_stopWatch_record"
             android:textSize="20dp"
             android:layout_margin="20dp"
             android:background="#00FFFFFF"
