--- a/app/src/main/res/drawable/btn_blue.xml
+++ b/app/src/main/res/drawable/btn_blue.xml
@@ -3,12 +3,11 @@
     <!-- 버튼 색깔 -->
     <solid android:color="#438AFF" /> <!-- 네 귀퉁이? 모양 -->
     <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp" /> <!-- 테두리 색깔 -->
+        android:bottomLeftRadius="32dp"
+        android:bottomRightRadius="32dp"
+        android:topLeftRadius="32dp"
+        android:topRightRadius="32dp" /> <!-- 테두리 색깔 -->
     <stroke
-        android:width="1dp"
-        android:color="#929BEC" />
+        android:width="0dp"/>
 
 </shape>
