--- a/app/src/main/res/drawable/btn_gray.xml
+++ b/app/src/main/res/drawable/btn_gray.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 버튼 색깔 -->
-    <solid android:color="#D1D1D1" /> <!-- 네 귀퉁이? 모양 -->
+    <solid android:color="#E9E9E9" /> <!-- 네 귀퉁이? 모양 -->
     <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp" /> <!-- 테두리 색깔 -->
-    <stroke
-        android:width="1dp"
-        android:color="#B1B1B1" />
+        android:bottomLeftRadius="32dp"
+        android:bottomRightRadius="32dp"
+        android:topLeftRadius="32dp"
+        android:topRightRadius="32dp" /> <!-- 테두리 색깔 -->
+
 
 </shape>
