--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -39,10 +39,12 @@
         android:gravity="center"
         android:text="00:00:00"
         android:textSize="56dp"
+        android:textColor="@color/black"
+        android:textFontWeight="200"
         android:layout_marginBottom="20dp"/>
 
     <LinearLayout
-        android:background="@drawable/border_bottom_black_thin"
+        android:background="@drawable/border_bottom_gray_thin"
         android:layout_marginRight="52dp"
         android:layout_marginLeft="52dp"
         android:paddingBottom="10dp"
@@ -125,7 +127,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
                 <TextView
-                    android:textSize="22dp"
+                    android:textSize="18dp"
                     android:gravity="center"
                     android:id="@+id/tv_interval"
                     android:layout_width="match_parent"
@@ -139,7 +141,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
                 <TextView
-                    android:textSize="22dp"
+                    android:textSize="18dp"
                     android:gravity="center"
                     android:id="@+id/tv_interval_record"
                     android:layout_width="match_parent"
@@ -153,7 +155,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
                 <TextView
-                    android:textSize="22dp"
+                    android:textSize="18dp"
                     android:gravity="center"
                     android:id="@+id/tv_course_record"
                     android:layout_width="match_parent"
@@ -167,28 +169,30 @@
 
 
     <LinearLayout
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="80dp"
         android:id="@+id/lout_record_start"
-        app:layout_constraintBottom_toTopOf="@+id/lout_menuBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/btn_record_init"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:layout_marginLeft="52dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/btn_gray"
-            android:textColor="#000000"
+            android:textColor="#6C6C6C"
             android:layout_weight="1"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="RECORD"/>
+            android:text="구간 기록"/>
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/btn_start_pause_resume"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:layout_marginRight="52dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/btn_blue"
@@ -196,48 +200,10 @@
             android:layout_weight="1"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="START"/>
+            android:text="시작"/>
     </LinearLayout>
 
 
-    <LinearLayout
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/lout_menuBar"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <Button
-            android:background="#00FFFFFF"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:id="@+id/btn_alarm"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Alarm"/>
-
-        <Button
-            android:background="#00FFFFFF"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:id="@+id/btn_stopWatch"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Watch"/>
-
-        <Button
-            android:background="#00FFFFFF"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:id="@+id/btn_timer"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Timer"/>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
