--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -25,6 +25,7 @@
     <LinearLayout
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="5dp"
+        android:paddingBottom="10dp"
         app:layout_constraintTop_toBottomOf="@+id/lout_option"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/lout_profile"
@@ -56,23 +57,21 @@
     </LinearLayout>
 
     <TextView
-        android:textStyle="bold"
         android:textSize="20dp"
-        android:paddingBottom="5dp"
+        android:paddingBottom="10dp"
         android:layout_margin="15dp"
         app:layout_constraintTop_toBottomOf="@+id/lout_profile"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/tv_online_offline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="offline"
-        android:paddingLeft="15dp"
+        android:text="Hello, World!"
+        android:paddingLeft="20dp"
         android:background="@drawable/border_bottom_gray_thin"/>
 
     <TextView
-        android:textStyle="bold"
         android:textSize="18dp"
-        android:paddingBottom="5dp"
+        android:paddingBottom="10dp"
         android:layout_margin="15dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_online_offline"
         app:layout_constraintRight_toRightOf="parent"
@@ -80,8 +79,60 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="최근 기록"
-        android:paddingLeft="15dp"
-        android:background="@drawable/border_bottom_gray_thin"/>
+        android:paddingLeft="20dp"/>
+
+    <LinearLayout
+        android:background="@drawable/edittext_gray"
+        android:layout_margin="24dp"
+        android:id="@+id/lout_temp1"
+        app:layout_constraintTop_toBottomOf="@+id/tv_recent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="vertical">
+        <TextView
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="14dp"
+            android:text="12:21.17까지 29번 측정"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_marginTop="-6dp"
+            android:layout_marginLeft="12dp"
+            android:text="with alarm, timer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
+    <LinearLayout
+        android:background="@drawable/edittext_gray"
+        android:layout_margin="24dp"
+        android:id="@+id/lout_temp2"
+        app:layout_constraintTop_toBottomOf="@+id/lout_temp1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="vertical">
+        <TextView
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="14dp"
+            android:text="05:20.85까지 16번 측정"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_marginTop="-6dp"
+            android:layout_marginLeft="12dp"
+            android:text="with java, python"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
