--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -77,6 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/et_join_id"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
                     android:hint="6~16 영소문자, 숫자"
@@ -89,6 +90,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <EditText
+
+                    android:id="@+id/et_join_password1"
+                    android:inputType="textPassword"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
                     android:hint="6~16 영소문자, 숫자, 특수문자"
@@ -101,6 +105,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/et_join_password2"
+                    android:inputType="textPassword"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
                     android:hint="비밀번호를 다시 입력하세요"
@@ -124,6 +130,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/et_join_name"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
                     android:backgroundTint="@color/dark_gray_thick"
@@ -136,6 +143,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/et_join_email"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
                     android:backgroundTint="@color/dark_gray_thick"
@@ -148,6 +156,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <EditText
+                    android:id="@+id/et_join_introduce"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
                     android:backgroundTint="@color/dark_gray_thick"
